add web fix backend

--- a/backend/.env
+++ b/backend/.env
@@ -9,8 +9,8 @@ APP_SECRET=bootcampgobarbernode
 
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=postgres
-DB_NAME=gobarber2
+DB_PASS=docker
+DB_NAME=gobarber
 
 # Mongo
 
