--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/masked-view": "^0.1.7",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "immer": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
@@ -24,6 +25,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.5",
+    "react-navigation-tabs": "^2.8.9",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
